# PPP

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
lab01/: CMakeLists.txt  job.sh  main.c
lab02/: CMakeLists.txt  job.sh  main.c
lab03/: 3_hang.c  README.txt  dd.c  deadlock.c  main.c
lab04/: CMakeLists.txt  job.sh  main.c
lab05/: CMakeLists.txt  job.sh  main.c
mpi_convex_hull/: .clang-tidy  CMakeLists.txt  README.md  main.cc
mpi_convex_hull/benchmark/: CMakeLists.txt
mpi_convex_hull/benchmark/include/: benchmark.h
mpi_convex_hull/benchmark/src/: benchmark.cc
mpi_convex_hull/convex_hull/: CMakeLists.txt
mpi_convex_hull/convex_hull/include/: graham_scan.h  orientation.h  point.h  point_cloud.h  tangent.h
mpi_convex_hull/convex_hull/src/: graham_scan.cc  orientation.cc  point.cc  point_cloud.cc  tangent.cc
mpi_convex_hull/convex_hull/test/: .clang-tidy  CMakeLists.txt  graham_scan_test.cc  orientation_test.cc  tangent_test.cc
mpi_convex_hull/scripts/: generate_point_cloud.sh  generate_point_cloud_all.sh  gnuplot.plg  gnuplot.sh  gnuplot_reference.sh  mpi_convex_hull.sh  mpi_convex_hull_all.sh
mpi_convex_hull/utils/: CMakeLists.txt
mpi_convex_hull/utils/include/: io.h
